[package]
name = "ndi"
version = "0.0.0"
description = "..."
authors = ["xTekC"]
repository = "https://github.com/xTekC/ndi"
readme = "README.md"
homepage = "https://github.com/xTekC/ndi"
documentation = "https://github.com/xTekC/ndi/blob/main/README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "async"]
# default-run = "ndi -h"
publish = false
# include = "[...]"
# exclude = "[...]"
# workspace = "..."
# links = "..."
# build = "build.rs"
rust-version = "1.73.0"
edition = "2021"
license = "MPL-2.0"

[[bin]]
name = "ndi"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
owo-colors = "4.0.0"
pnet = "0.34.0"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }


# [dependencies.cursive]
# version = "0.20.0"
# default-features = false
# features = ["crossterm-backend"]

# [dev-dependencies]


# [build-dependencies]


[profile.rel-opt]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
strip = true
